[project]
name = "regex-central-backend"
version = "0.2.0"
description = "Backend (Python) for regex-central"
authors = [
    {name = "Breno Fernandes Ceribeli", email = "ceribelibreno@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
packages = [
  { include = "builder", from = "src" },
  { include = "web", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.6.0"
mypy = "^1.10"

[tool.ruff]
line-length = 100
exclude = [
  ".venv",
  "__pycache__",
  ".pytest_cache",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RET", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["builder", "web"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = "-v"

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
exclude = [
  "^\\.venv/",
  "^__pycache__/",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
